feat: prevent kicking of members with history; add active filter instead
